# TG_Integration

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/tg_integration/: __init__.py  amocrm_chats.py  amocrm_crm.py  bridge_service.py  chat_history.py  config.py  lead_history.py  main.py  storage.py  telegram_bridge.py  telegram_client.py  telegram_polling.py
tests/: test_amocrm_chats.py  test_lead_history.py  test_telegram_bridge.py
