[project]
name = "tg-integration"
version = "0.1.0"
description = "amoCRM chats webhook integration service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "pydantic-settings>=2,<3",
    "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
